--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,17 +9,17 @@
                 <div class="name-field">
                     <label for="user-field">
                         <p>
-                            User Name : 
+                            Username : 
                         </p>
                     </label>
                     <input id="userName" class="inputError" placeholder="Username" type="text" name="userName" required maxlength="45"
                     value="<%= typeof userName !== 'undefined' ? userName : '' %>">
                 </div>
                 <span role="alert" class="requiredError" aria-hidden="true">
-                    Please enter First Name
+                    Please enter Username
                 </span>
-                <div class="password-field">
-                    <label for="pass-field">
+                <div class="name-field">
+                    <label for="user-field">
                         <p>
                             Password : 
                         </p>
