--- a/views/uploadArt.ejs
+++ b/views/uploadArt.ejs
@@ -53,7 +53,7 @@
                     </label>
                     <!-- <input id="profile_image" placeholder="" type="profile_image" name="profile_image" -->
 
-                    <input type="file" name="profile_image">
+                    <input type="file" name="profile_image" accept="image/*">
                 </div>
                 <div class="about-field">
                     <label for="about-field">
@@ -62,6 +62,42 @@
                         </p>
                     </label>
                     <input id="about-field" placeholder="Min Bid" type="text" name="min_bid">
+
+                </div>
+                <div class="date-field">
+                    <label for="date-field">
+                        <p>
+                            Start Date : 
+                        </p>
+                    </label>
+                    <input id="date-field" placeholder="Start Date" type="date" name="start_date">
+
+                </div>
+                <div class="date-field">
+                    <label for="date-field">
+                        <p>
+                            End Date : 
+                        </p>
+                    </label>
+                    <input id="date-field" placeholder="End Date" type="date" name="end_date">
+
+                </div>
+                <div class="time-field">
+                    <label for="time-field">
+                        <p>
+                            Start Time : 
+                        </p>
+                    </label>
+                    <input id="time-field" placeholder="Start Time" type="time" name="start_time">
+
+                </div>
+                <div class="time-field">
+                    <label for="time-field">
+                        <p>
+                            End Time : 
+                        </p>
+                    </label>
+                    <input id="time-field" placeholder="End Time" type="time" name="end_time">
 
                 </div>
                 <div class="login-btn-field">
