--- a/public/css/form.css
+++ b/public/css/form.css
@@ -601,7 +601,7 @@ html, body {
     padding: 1rem;
 }
 
-input[type='text'], input[type='password'] , input[type='email'] {
+input[type='text'], input[type='password'] , input[type='email'], input[type='date'], input[type='time'] {
     width: 100%;
     height: 30px;
     border-radius: 5px;
