--- a/views/layouts/innerheader.ejs
+++ b/views/layouts/innerheader.ejs
@@ -13,7 +13,9 @@
 
 
 
-<div class="logotitle">
+<div class="logotitle" style="
+margin-top: 19px;
+">
     <a href=""> <img src="images/logo_transparent.png" alt="bid Logo"> </a>
     <h2> </h2>
 </div>
@@ -33,3 +35,4 @@
         </ul>
     </nav>
 </div>
+<div>
