--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -1,123 +1,122 @@
 <%- include('layouts/outerheader'); -%>
 
-    <body>
-        <div style="height: 100px;">
-        </div>
-        <div class="main-div">
-        <div class="logo">
-        </div>
-        <% if (successCheck && successCheck.length> 0) { %>
-            <form method="post" action="/forgotpassword" class="login-form" id="submitFormValidate">
-                <div class="login-box">
-                    <h3 class="title-heading">Change Password</h3>
-                    <div class="name-field">
-                        <input type="hidden" id="userName" placeholder="Username" name="userName"
-                        value="<%= typeof successCheck[0].userName !== 'undefined' ? successCheck[0].userName : '' %>">
-                    </div>
-                <div class="name-field">
-                    <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
-                    value="<%= typeof successCheck[0].securityQuestion !== 'undefined' ? successCheck[0].securityQuestion : '' %>">
-                </div>
-                <div class="name-field">
-                    <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
-                value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
-                </div>
-                <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                        New Password : 
-                        </p>
-                    </label>
-                    <input id="password" placeholder="New Password" type="text" name="password" class="inputError">
-                </div>
-                <span role="alert" class="requiredError" aria-hidden="true">
-                    Please enter New Password
-                </span>
-                <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                        Confirm Password : 
-                        </p>
-                    </label>
-                    <input id="confirmpassword" placeholder="Confirm Password" type="text" name="confirmpassword" class="inputError">
-                </div>
-                <span role="alert" class="requiredError" aria-hidden="true">
-                    Please enter Confirm Password
-                </span>
-                <br>
-                <% if (errors && errors.length> 0) { %>
-                    <div class="error-message">
-                    <% for (let i=0; i < errors.length; i++) { %>
-                        <p class="error-text">
-                        <%= errors[i].msg %>
-                        </p>
-                        <% } %>
-                    </div>
-                    <% } %>
-                <div class="login-btn-field">
-                    <!-- <button class="register" type="register">Submit</button> -->
-                    <input id="submitId" value="Change Password" type="submit" class="login-btn" onclick="validateForm(event)">
-                </div>
-            </div>
-            </form>
-        <% }else { %>
-            <form method="post" action="/forgotpassword-check" class="login-form" id="submitFormValidateSecurityCheck">
-                <div class="login-box">
-                    <h3 class="title-heading">Forgot Password</h3>
-                    <div class="name-field">
-                        <label for="user-field">
-                            <p>
-                                Username : 
-                            </p>
-                        </label>
-                        <input type="text" id="userName" placeholder="Username" name="userName" class="inputErrorSecurityCheck">
-                    </div>
-                    <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
-                        Please enter Username
-                      </span>
-                    <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                            Security Question : 
-                        </p>
-                    </label>
-                    <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion" class="inputErrorSecurityCheck"
-                        value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
-                    </div>
-                    <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
-                        Please enter Security Question
-                    </span>
-                    <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                            Security Answer : 
-                        </p>
-                    </label>
-                    <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer" class="inputErrorSecurityCheck"
+<body>
+	<div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+						<img src="images/logo.png" class="brand_logo" alt="Logo">
+					</div>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+
+                    <% if (successCheck && successCheck.length> 0) { %>
+					<form method="post"action="/forgotpassword" id="submitFormValidate">
+                        <div><br>
+                            <div class="name-field" >
+                                
+                                <input type="hidden" id="userName" placeholder="Username" name="userName"
+                                value="<%= typeof successCheck[0].userName !== 'undefined' ? successCheck[0].userName : '' %>">
+                            </div>
+                           
+                            <div class="name-field">
+                                
+                                <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
+                                value="<%= typeof successCheck[0].securityQuestion !== 'undefined' ? successCheck[0].securityQuestion : '' %>">                            
+                            </div>
+
+                            <div class="name-field">
+                                <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
+                            value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
+                            </div>
+
+                            <div class="name-field" >
+                                
+                                <input id="password" placeholder="New Password" type="text" name="password" class="inputError">
+
+                            </div>
+                            <span role="alert" class="requiredError" aria-hidden="true">
+                                Please enter New Password
+                            </span>
+
+                            <div class="name-field" >
+                                
+                                <input id="confirmpassword" placeholder="Confirm Password" type="text" name="confirmpassword" class="inputError">
+
+                            </div>
+                            <span role="alert" class="requiredError" aria-hidden="true">
+                                Please enter Confirm Password
+                            </span>
+                            
+                            <% if (errors && errors.length> 0) { %>
+                                <div class="error-message">
+                                  <% for (let i=0; i < errors.length; i++) { %>
+                                    <p class="error-text">
+                                      <%= errors[i].msg %>
+                                    </p>
+                                    <% } %>
+                                </div>
+                            <% } %>
+                            <div class="d-flex justify-content-center mt-3 login_container">
+                                <input id="submitId" value="Change Password" type="submit" class="login-btn" onclick="validateForm(event)">
+                            </div><br>
+                            
+                        </div>
+                    </form>
+                    <% }else { %>
+
+                        <form method="post" action="/forgotpassword-check" id="submitFormValidateSecurityCheck">
+                            <div><br>
+                                <div class="name-field" >
+                                    
+                                    <input type="text" id="userName" placeholder="Username" name="userName" class="inputErrorSecurityCheck">
+
+                                </div>
+                                <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
+                                    Please enter Username
+                                </span>
+                                <div class="name-field">
+                                    
+                                    <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion" class="inputErrorSecurityCheck"
+                                    value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
+                                                                </div>
+                                <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
+                                    Please enter Security Question
+                                  </span>
+
+                                  <div class="name-field">
+                                    
+                                    <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer" class="inputErrorSecurityCheck"
                             value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
                     </div>
                     <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
                         Please enter Security Answer
                     </span>
-                    <br>
-                    <% if (errors && errors.length> 0) { %>
-                        <div class="error-message">
-                        <% for (let i=0; i < errors.length; i++) { %>
-                            <p class="error-text">
-                            <%= errors[i].msg %>
-                            </p>
+                                <% if (errors && errors.length> 0) { %>
+                                    <div class="error-message">
+                                      <% for (let i=0; i < errors.length; i++) { %>
+                                        <p class="error-text">
+                                          <%= errors[i].msg %>
+                                        </p>
+                                        <% } %>
+                                    </div>
+                                <% } %>
+                                <div class="d-flex justify-content-center mt-3 login_container">
+                                    <input id="submitIdVal" value="Submit" type="submit" class="login-btn" onclick="validateFormSecurityCheck(event)">
+                                </div><br>
+                                
+                            </div>
+                        </form>
                         <% } %>
-                        </div>
-                    <% } %>
-                    <div class="login-btn-field">
-                        <input id="submitIdVal" value="Submit" type="submit" class="login-btn" onclick="validateFormSecurityCheck(event)">
-                        <!-- <button class="register" type="register">Submit</button> -->
-                    </div>
-                </div>
-            </form>
-        <% } %>
-        </div>
-    </body>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</body>
+
+    
     <script>
         function validateFormSecurityCheck(e) {
             const form = document.getElementById('submitFormValidateSecurityCheck')
