--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,62 +1,63 @@
 <%- include('layouts/outerheader'); -%>
-  <body>
-    <div class="main-div"> 
-        <div class="logo">
-        </div>
-        <form method="post" action="/login" id="submitFormValidate"  class="login-form">
-            <div class="login-box">
-                <h3 class="title-heading">Login</h3>
-                <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                            Username : 
-                        </p>
-                    </label>
-                    <input id="userName" class="inputError" placeholder="Username" type="text" name="userName" required maxlength="45"
-                    value="<%= typeof userName !== 'undefined' ? userName : '' %>">
-                </div>
-                <span role="alert" class="requiredError" aria-hidden="true">
-                    Please enter Username
-                </span>
-                <div class="name-field">
-                    <label for="user-field">
-                        <p>
-                            Password : 
-                        </p>
-                    </label>
-                    <input id="pass-field" class="inputError" placeholder="Password" type="password" name="password">
-                </div>
-                <span role="alert" class="requiredError" aria-hidden="true">
-                    Please enter Password
-                  </span>
-                <% if (errors && errors.length> 0) { %>
-                    <div class="error-message">
-                      <% for (let i=0; i < errors.length; i++) { %>
-                        <p class="error-text">
-                          <%= errors[i].msg %>
-                        </p>
-                        <% } %>
-                    </div>
-                <% } %>
-                <div class="login-btn-field">
-                    <input id="submitId" value="Login" type="submit" class="login-btn" onclick="validateForm(event)">
-                </div><br>
-                <div class="forgotpasswordlink">
-                    <a href="/forgotpassword" data-toggle="modal" data-dismiss="modal"
-                      class="close-modal pointer-class" data-modalid="forgotModal"> Forgot your password?</a>
-                    <br /><br />
-                  </div>
-                <div class="register-field">
-                    <a href="register">
-                        <p>
-                            New user? Register here
-                        </p>
-                    </a>
-                </div>
-            </div>
-        </form>
-    </div>
-  </body>
+<body>
+	<div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+						<img src="images/logo.png" class="brand_logo" alt="Logo">
+					</div>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+					<form method="post" action="/login" id="submitFormValidate">
+                        <div><br>
+                            <div class="name-field" >
+                                
+                                <input id="userName" class="inputError form-control input_user" placeholder="Username" type="text" name="userName" required maxlength="45"
+                                value="<%= typeof userName !== 'undefined' ? userName : '' %>">
+                            </div>
+                            <span role="alert" class="requiredError" aria-hidden="true">
+                                Please enter Username
+                            </span>
+                            <div class="name-field">
+                                
+                                <input id="pass-field" class="inputError" placeholder="Password" type="password" name="password">
+                            </div>
+                            <span role="alert" class="requiredError" aria-hidden="true">
+                                Please enter Password
+                              </span>
+                            <% if (errors && errors.length> 0) { %>
+                                <div class="error-message">
+                                  <% for (let i=0; i < errors.length; i++) { %>
+                                    <p class="error-text">
+                                      <%= errors[i].msg %>
+                                    </p>
+                                    <% } %>
+                                </div>
+                            <% } %>
+                            <div class="d-flex justify-content-center mt-3 login_container">
+                                <input id="submitId" value="Login" type="submit" class="btn login_btn" onclick="validateForm(event)">
+                            </div><br>
+                            <div class="forgotpasswordlink">
+                                <a href="/forgotpassword" data-toggle="modal" data-dismiss="modal"
+                                  class="close-modal pointer-class" data-modalid="forgotModal"> Forgot your password?</a>
+                                
+                              </div>
+                            <div class="register-field">
+                                <a href="register">
+                                    <p>
+                                        New user? Register here
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                    </form>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</body>
 <script>
     // const submit1 = document.getElementById("submitId");
     // submit1.addEventListener("click", validate);
