--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,8 +40,10 @@
                     </div> 
                 </div> 
                 <div class="imgBx"> 
+                    <a href="/art-detail/<%= product._id %>">
                     <img src="<%= product.image %>"
                     class="cover" />
+                </a>
                 </div> 
                 <div class="bottom"> 
                     <div class="actionBtns"> 
