--- a/views/layouts/innerheader.ejs
+++ b/views/layouts/innerheader.ejs
@@ -1,3 +1,8 @@
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,23 +18,21 @@
 
 
 
-<div class="logotitle" style="
-margin-top: 19px;
-">
-    <a href=""> <img src="images/logo_transparent.png" alt="bid Logo"> </a>
+<div class="logotitle" >
+    <a href=""> <img src="/images/logo.png" alt="bid Logo"> </a>
     <h2> </h2>
 </div>
 
 <div class="menubar">
     <nav>
         <ul>
-            <li><a href="welcome">Home</a></li>
+            <li><a href="/welcome">Home</a></li>
             <li>
-                <a href="uploadart">Upload Art</a>
+                <a href="/art-list">My Arts</a>
 
             </li>
             <li>
-                <a href="profile">My Profile</a>
+                <a href="/profile">My Profile</a>
             </li>
             <li><a href="/logout">Logout</a></li>
         </ul>
