--- a/public/css/form.css
+++ b/public/css/form.css
@@ -510,6 +510,11 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
+  input[type="number"] {
+    margin-bottom: 0px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@@ -601,7 +606,7 @@ html, body {
     padding: 1rem;
 }
 
-input[type='text'], input[type='password'] , input[type='email'], input[type='date'], input[type='time'] {
+input[type='text'], input[type='password'] , input[type='email'], input[type='date'], input[type='time'],  input[type='number'] {
     width: 100%;
     height: 30px;
     border-radius: 5px;
@@ -778,6 +783,91 @@ display: block;
     height: 240px;
     width: 240px;
  }
+
+ .showLeft{
+    background-color: #0d77b6 !important;
+    border:1px solid #0d77b6 !important;
+    text-shadow: none !important;
+    color:#fff !important;
+    padding:10px;
+}
+
+.icons li {
+    background: none repeat scroll 0 0 #fff;
+    height: 7px;
+    width: 7px;
+    line-height: 0;
+    list-style: none outside none;
+    margin-right: 15px;
+    margin-top: 3px;
+    vertical-align: top;
+    border-radius:50%;
+    pointer-events: none;
+}
+
+.btn-left {
+    left: 0.4em;
+}
+
+.btn-right {
+    right: 0.4em;
+}
+
+.btn-left, .btn-right {
+    position: absolute;
+    top: 0.24em;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    position: fixed;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.dropdown {
+    position: absolute;
+    display: inline-block;
+    right: 0.4em;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    margin-top: 60px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
+dd {
+
+    margin-top: 0px !important;
+}
+
+.desc {
+
+    color:black;
+}
 
 
 
