--- a/views/arts.ejs
+++ b/views/arts.ejs
@@ -95,14 +95,12 @@
                     <span> 
                         <p class="message"> 
                         
-                        <b>Start Date:</b> <%= product.start_date %>
-                        <b>Start Time:</b> <%= product.start_time %>
+                        <b>Start Date & Time:</b> <%= product.start_date %> <%= product.start_time %>
                         </p> 
                     </span> 
                     <span> 
                         <p class="message"> 
-                        <b>End Date:</b> <%= product.end_date %>
-                        <b>End Time:</b> <%= product.end_time %> 
+                        <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
                         </p> 
                     </span> 
                   
