--- a/views/pastAuction.ejs
+++ b/views/pastAuction.ejs
@@ -69,6 +69,17 @@
                         </p> 
 
                     </span> 
+                    <span> 
+                        <p class="message"> 
+                        
+                        <b>Start Date & Time:</b> <%= product.start_date %> <%= product.start_time %>
+                        </p> 
+                    </span> 
+                    <span> 
+                        <p class="message"> 
+                        <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
+                        </p> 
+                    </span> 
                     
                 </div>  
             </div> <br><br>
