--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,7 +104,7 @@
                             <span role="alert" class="requiredError" aria-hidden="true">
                                 Please enter Comment
                             </span><br>
-                        <button onclick="postComment(event,'<%= key %>')">Post</a> 
+                        <button class="btn btn-danger" style="background-color: #bd2130;" onclick="postComment(event,'<%= key %>')">Post</a> 
                     </div> 
                 </div>  
             </div> <br><br>
