--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,11 +80,11 @@
                         <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
                         </p> 
                     </span> 
-                <!-- <button type="button" class="btn btn-info btn-lg" onclick="openModel('<%= product._id %>')">View all comments</button>
+                <button type="button" class="btn btn-info btn-lg" onclick="openModel('<%= product._id %>')">View all comments</button>
                     
                     
 
-                    <a href="#" data-toggle="modal" data-target="#myModal" > 
+                    <!-- <a href="#" data-toggle="modal" data-target="#myModal" > 
                         
                         <h4 class="comments">View all comments</h4> 
                     </a>  -->
